OCPBUGS-36533-14: Removed discrete tags from 4.14 RN new features

--- a/release_notes/ocp-4-14-release-notes.adoc
+++ b/release_notes/ocp-4-14-release-notes.adoc
@@ -88,14 +88,17 @@ With this update, you can opt out of the automatic deletion of the S3 bucket dur
 
 [id="ocp-4-14-nat-gateway-azure"]
 ==== Installing a cluster on Microsoft Azure using a NAT gateway (Technology Preview)
+
 In {product-title} {product-version}, you can install a cluster that uses a NAT gateway for outbound networking. This is available as a Technology Preview (TP). For more information, see xref:../installing/installing_azure/installation-config-parameters-azure.adoc#installation-configuration-parameters-additional-azure_installation-config-parameters-azure[Additional Azure configuration parameters].
 
 [id="ocp-4-14-pd-balanced-disktype-gcp"]
 ==== Installing a cluster on Google Cloud Platform (GCP) using pd-balanced disk type
+
 In {product-title} {product-version}, you can install a cluster on GCP using the `pd-balanced` disk type. This disk type is only available for compute nodes and cannot be used for control plane nodes. For more information, see xref:../installing/installing_gcp/installation-config-parameters-gcp.adoc#installation-configuration-parameters-additional-gcp_installation-config-parameters-gcp[Additional GCP configuration parameters].
 
 [id="ocp-4-14-optional-capabilities"]
 ==== Optional capabilities in {product-title} {product-version}
+
 In {product-title} {product-version}, you can disable the `Build`, `DeploymentConfig`, `ImageRegistry` and `MachineAPI` capabilities during installation. You can only disable the `MachineAPI` capability if you install a cluster with user-provisioned infrastructure. For more information, see xref:../installing/overview/cluster-capabilities.adoc#cluster-capabilities[Cluster capabilities].
 
 [id="ocp-4-14-azure-ad-workload-id"]
@@ -157,18 +160,22 @@ For more information, see xref:../updating/preparing_for_updates/updating-cluste
 
 [id="ocp-4-14-nutanix-three-node"]
 ==== Three-node cluster support for Nutanix
+
 Deploying a three-node cluster is supported on Nutanix as of {product-title} {product-version}. This type of {product-title} cluster is a more resource efficient cluster. It consists of only three control plane machines, which also act as compute machines. For more information, see xref:../installing/installing_nutanix/installing-nutanix-three-node.adoc#installing-nutanix-three-node[Installing a three-node cluster on Nutanix].
 
 [id="ocp-4-14-installation-gcp-confidential-vms"]
 ==== Installing a cluster on GCP using Confidential VMs is generally available
+
 In {product-title} {product-version}, using Confidential VMs when installing your cluster is generally available. Confidential VMs are currently not supported on 64-bit ARM architectures. For more information, see xref:../installing/installing_gcp/installing-gcp-customizations.adoc#installation-gcp-enabling-confidential-vms_installing-gcp-customizations[Enabling Confidential VMs].
 
 [id="ocp-4-14-rootvolume-types-openstack-available"]
 ==== Root volume types parameter for {rh-openstack} is now available
+
 You can now specify one or more root volume types in {rh-openstack}, by using the `rootVolume.types` parameter. This parameter is available for both control plane and compute machines.
 
 [id="ocp-4-14-static-ip-addresses-vsphere-nodes"]
 ==== Static IP addresses for vSphere nodes
+
 You can provision bootstrap, control plane, and compute nodes with static IP addresses in environments where Dynamic Host Configuration Protocol (DHCP) does not exist.
 
 :FeatureName: Static IP addresses for vSphere nodes
@@ -185,6 +192,7 @@ The Bare Metal Host Custom Resource (CR) now contains the `ValidatingWebhooks` p
 
 [id="ocp-4-14-quickly-install-cluster-aws-local-zones"]
 ==== Install a cluster quickly in AWS Local Zones
+
 For {product-title} {product-version}, you can quickly install a cluster on Amazon Web Services (AWS) to extend compute nodes to Local Zone locations. After you add zone names to the installation configuration file, the installation program fully automates the creation of required resources, network and compute, on each Local Zone. For more information, see xref:../installing/installing_aws/installing-aws-localzone.adoc#installation-cluster-quickly-extend-workers_installing-aws-localzone[Intall a cluster quickly in AWS Local Zones].
 
 [id="ocp-4-14-install-update-cco-manual-enhancements"]
@@ -208,6 +216,7 @@ To understand how to use these parameters, see the installation procedure for yo
 
 [id="ocp-4-14-vsphere-pre-existing-template"]
 ==== Quickly install {op-system} on vSphere hosts by using a pre-existing {op-system} image template
+
 {product-title} {product-version} includes a new VMware vSphere configuration parameter for use on installer-provisioned infrastructure: `template`. By using this parameter, you can now specify the absolute path to a pre-existing {op-system-first} image template or virtual machine in the installation configuration file. The installation program can then use the image template or virtual machine to quickly install {op-system} on vSphere hosts.
 
 This installation method is an alternative to uploading an {op-system} image on vSphere hosts.
@@ -252,6 +261,7 @@ For more information about these parameters, see xref:../installing/installing_a
 
 [id="ocp-4-14-OCP-on-multi-arch-clusters"]
 ==== {product-title} cluster with multi-architecture compute machines
+
 {product-title} {product-version} clusters with multi-architecture compute machines are now supported on Google Cloud Platform (GCP) as a Day 2 operation. {product-title} clusters with multi-architecture compute machines on bare metal installations are now generally available. For more information on clusters with multi-architecture compute machines and supported platforms, see xref:../post_installation_configuration/configuring-multi-arch-compute-machines/multi-architecture-configuration.adoc#multi-architecture-configuration[About clusters with multi-architecture compute machines].
 
 [id="ocp-4-14-web-console"]
@@ -361,7 +371,7 @@ With this release, {ibm-z-name} and {ibm-linuxone-name} are now compatible with 
 Compute nodes must run {op-system-first}.
 ====
 
-[discrete]
+[id="release-notes-ibm-z-notable-enhancements"]
 ==== {ibm-z-title} and {ibm-linuxone-title} notable enhancements
 
 Starting in {product-title} {product-version}, Extended Update Support (EUS) is extended to the {ibm-z-name} platform. For more information, see the link:https://access.redhat.com/support/policy/updates/openshift-eus[OpenShift EUS Overview].
@@ -376,7 +386,7 @@ This release introduces support for the following features on {ibm-z-name} and {
 * Multi-architecture compute nodes
 * oc-mirror plugin
 
-[discrete]
+[id="release-notes-ibm-secure-execution"]
 ==== IBM Secure Execution
 
 {product-title} now supports configuring {op-system-first} nodes for IBM Secure Execution on {ibm-z-name} and {ibm-linuxone-name} (s390x architecture).
@@ -398,7 +408,7 @@ For installation instructions, see the following documentation:
 Compute nodes must run {op-system-first}.
 ====
 
-[discrete]
+[id="release-notes-ibm-power-notable-enhancements"]
 ==== {ibm-power-title} notable enhancements
 
 Starting in {product-title} {product-version}, Extended Update Support (EUS) is extended to the {ibm-power-name} platform.  For more information, see the link:https://access.redhat.com/support/policy/updates/openshift-eus[OpenShift EUS Overview].
@@ -413,7 +423,7 @@ This release introduces support for the following features on {ibm-power-name}:
 * Multi-architecture compute nodes
 * oc-mirror plugin
 
-[discrete]
+[id="release-notes-ibm-support-matrix"]
 === {ibm-power-title}, {ibm-z-title}, and {ibm-linuxone-title} support matrix
 
 .{product-title} features
@@ -757,6 +767,7 @@ For more information, refer to xref:../networking/ovn_kubernetes_network_provide
 
 [id="ocp-4-14-ingress-node-firewall-operator-ga"]
 ==== Ingress Node Firewall Operator is generally available
+
 Ingress Node Firewall Operator was designated a Technology Preview feature in {product-title} 4.12. With this release, Ingress Node Firewall Operator is generally available. You can now configure firewall rules at the node level. For more information, see xref:../networking/networking-operators-overview.adoc#ingress-node-firewall-operator-1_networking-operators-overview[Ingress Node Firewall Operator].
 
 [id="ocp-4-14-networking-kernal-network-pinning"]
@@ -790,10 +801,12 @@ For more information about this more flexible SR-IOV network deployment during N
 
 [id="ocp-4-14-networking-haproxy-update"]
 ==== Update to HAProxy 2.6
+
 With this release, {product-title} is updated to HAProxy 2.6.
 
 [id="ocp-4-14-max-log-length-sidecar"]
 ==== Support for configuring the maximum length with sidecar logging in the Ingress Controller
+
 Previously, the maximum length of the syslog message in the Ingress Controller was 1024 bytes. Now, the maximum value can be increased.
 For more information, see xref:../networking/ingress-operator.adoc#nw-configure-ingress-access-logging_configuring-ingress[Allow the Ingress Controller to modify the HAProxy log length when using a sidecar].
 
@@ -816,6 +829,7 @@ To use this feature, you need to define an IPsec configuration tuned for your ne
 
 [id="ocp-4-14-single-stack-support-nmstate"]
 ==== Single-stack IPv6 support for Kubernetes NMstate
+
 With this release, you can use Kubernetes NMState Operator in single-stack IPv6 clusters.
 
 [id="ocp-4-14-networking-egress-service"]
@@ -918,6 +932,7 @@ In the {product-title} 4,13 release, the `168.254.0.0/16` IP address range was t
 
 [id="ocp-4-14-optional-image-registry-operator"]
 ==== Optional Image Registry Operator
+
 With this release, the Image Registry Operator is now an optional component. This feature helps reduce the overall resources footprint of {product-title} in Telco environments when the Image Registry Operator is not needed. For more information about disabling the Image Registry Operator, see xref:../installing/overview/cluster-capabilities.adoc#selecting-cluster-capabilities_cluster-capabilities[Selecting cluster capabilities].
 
 [id="ocp-4-14-storage"]
@@ -925,30 +940,36 @@ With this release, the Image Registry Operator is now an optional component. Thi
 
 [id="ocp-4-14-storage-device-selector"]
 ==== Support for OR logic in LVMS
+
 With this release, the logical volume manager (LVM) cluster custom resource (CR) provides `OR` logic in the `deviceSelector` setting. In previous releases, specifying the `paths` setting for device paths used `AND` logic only. With this release, you can also specify the `optionalPaths` setting, which supports `OR` logic. For more information, see the CR examples in xref:../storage/persistent_storage/persistent_storage_local/persistent-storage-using-lvms.adoc#persistent-storage-using-lvms[Persistent storage using logical volume manager storage].
 
 [id="ocp-4-14-storage-lvms-ext4-support"]
 ==== Support for ext4 in LVMS
+
 With this release, the logical volume manager (LVM) cluster custom resource (CR) provides support for the `ext4` filesystem with the `fstype` setting under `deviceClasses`. The default filesystem is `xfs`. For more information, see the CR examples in xref:../storage/persistent_storage/persistent_storage_local/persistent-storage-using-lvms.adoc#persistent-storage-using-lvms[Persistent storage using logical volume manager storage].
 
 [id="ocp-4-14-storage-standardized-sts-config"]
 ==== Standardized STS configuration workflow
+
 {product-title} {product-version} provides a streamlined and standardized procedure to configure Security Token Service (STS) with the AWS Elastic File Storage (EFS) Container Storage Interface (CSI) Driver Operator.
 
 For more information, see xref:../storage/container_storage_interface/persistent-storage-csi-aws-efs.adoc#efs-sts_persistent-storage-csi-aws-efs[Obtaining a role Amazon Resource Name for Security Token Service].
 
 [id="ocp-4-14-storage-rwop-access-mode"]
 ==== Read Write Once Pod access mode (Technology Preview)
+
 {product-title} {product-version} introduces a new access mode for persistent volumes (PVs) and persistent volume claims (PVCs) called ReadWriteOncePod (RWOP), which can be used only in a single pod on a single node. This is compared to the existing ReadWriteOnce access mode where a PV or PVC can be used on a single node by many pods. This is available as a Technology Preview feature.
 
 For more information, see xref:../storage/understanding-persistent-storage.adoc#pv-access-modes_understanding-persistent-storage[Access modes].
 
 [id="ocp-4-14-storage-gcp-filestore-csi-driver"]
 ==== GCP Filestore storage CSI Driver Operator is generally available
+
 {product-title} is capable of provisioning persistent volumes (PVs) using the Container Storage Interface (CSI) driver for Google Compute Platform (GCP) Filestore Storage. The GCP Filestore CSI Driver Operator was introduced in {product-title} 4.12 with Technology Preview support. The GCP Filestore CSI Driver Operator is now generally available. For more information, see xref:../storage/container_storage_interface/persistent-storage-csi-google-cloud-file.adoc#persistent-storage-csi-google-cloud-file[Google Compute Platform Filestore CSI Driver Operator].
 
 [id="ocp-4-14-storage-automigration-vsphere"]
 ==== Automatic CSI migration for VMware vSphere
+
 The Automatic CSI migration for VMware vSphere feature automatically translates in-tree objects to their counterpart CSI representations and, ideally, must be completely transparent to users. Although storage class referencing to the in-tree storage plug-in continues to work, consider switching the default storage class to the CSI storage class.
 
 In {product-title} {product-version}, CSI migration for vSphere is enabled by default under all circumstances and requires no action by an administrator.
@@ -959,12 +980,14 @@ For more information, see xref:../storage/container_storage_interface/persistent
 
 [id="ocp-4-14-storage-secrets-store-csi-driver-operator"]
 ==== Secrets Store CSI Driver Operator (Technology Preview)
+
 The Secrets Store Container Storage Interface (CSI) Driver Operator, `secrets-store.csi.k8s.io`, allows {product-title} to mount multiple secrets, keys, and certificates stored in enterprise-grade external secrets stores into pods as an inline ephemeral volume. The Secrets Store CSI Driver Operator communicates with the provider using gRPC to fetch the mount contents from the specified external secrets store. After the volume is attached, the data in it is mounted into the container’s file system. This is available as a Technology Preview feature. For more information about the {secrets-store-driver}, see xref:../storage/container_storage_interface/persistent-storage-csi-secrets-store.adoc#persistent-storage-csi-secrets-store[{secrets-store-driver}].
 
 For information about using the {secrets-store-operator} to mount secrets from an external secrets store to a CSI volume, see xref:../nodes/pods/nodes-pods-secrets-store.adoc#nodes-pods-secrets-store[Providing sensitive data to pods by using an external secrets store].
 
 [id="ocp-4-14-storage-azure-file-nfs"]
 ==== Azure File supporting NFS is generally available
+
 {product-title} {product-version} supports Azure File Container Storage Interface (CSI) Driver Operator with Network File System (NFS) as generally available.
 
 For more information, see xref:../storage/container_storage_interface/persistent-storage-csi-azure-file.adoc#persistent-storage-csi-azure-file-nfs_persistent-storage-csi-azure-file[NFS support].
@@ -1160,6 +1183,7 @@ The monitoring stack for this release includes the following new and modified fe
 
 [id="ocp-4-14-monitoring-updates-to-monitoring-stack-components-and-dependencies"]
 ==== Updates to monitoring stack components and dependencies
+
 This release includes the following version updates for monitoring stack components and dependencies:
 
 * `kube-state-metrics` to 2.9.2
@@ -1246,6 +1270,7 @@ You can now use {cmo-short} settings to configure the following features of the 
 
 [id="ocp-4-14-network-observability-1-4"]
 === Network Observability Operator
+
 The Network Observability Operator releases updates independently from the {product-title} minor version release stream. Updates are available through a single, rolling stream which is supported on all currently supported versions of {product-title} 4. Information regarding new features, enhancements, and bug fixes for the Network Observability Operator is found in the xref:../observability/network_observability/network-observability-operator-release-notes.adoc[Network Observability release notes].
 
 [id="ocp-4-14-scalability-and-performance"]
@@ -1255,8 +1280,7 @@ The Network Observability Operator releases updates independently from the {prod
 ==== PAO must-gather image added to default must-gather image
 
 With this release, the Performance Addon Operator (PAO) must-gather image is no longer required as an argument for the `must-gather` command to capture debugging data related to low-latency tuning. The functions of the PAO must-gather image are now under the default plugin image used by the `must-gather` command without any image arguments.
-For further information about gathering debugging information relating to low-latency tuning, see xref:../scalability_and_performance/low_latency_tuning/cnf-debugging-low-latency-tuning-status.adoc#cnf-collecting-low-latency-tuning-debugging-data-for-red-hat-support_cnf-debugging-low-latency[Collecting low latency tuning debugging data for Red Hat Support]
-.
+For further information about gathering debugging information relating to low-latency tuning, see xref:../scalability_and_performance/low_latency_tuning/cnf-debugging-low-latency-tuning-status.adoc#cnf-collecting-low-latency-tuning-debugging-data-for-red-hat-support_cnf-debugging-low-latency[Collecting low latency tuning debugging data for Red Hat Support].
 
 [id="ocp-4-14-NRO-image-must-gather"]
 ==== Collecting data for the NUMA Resources Operator with the must-gather image of the Operator
@@ -1270,6 +1294,7 @@ With this release, you have more control over the C-states for your pods. Now, i
 
 [id="ocp-4-14-nw-ipv6-spoke-cluster-support"]
 ==== Support for provisioning IPv6 spoke clusters from dual-stack hub clusters
+
 With this update, you can provision IPv6 address spoke clusters from dual-stack hub clusters. In a zero touch provisioning (ZTP) environment, the HTTP server on the hub cluster that hosts the boot ISO now listens on both IPv4 and IPv6 networks. The provisioning service also checks the baseboard management controller (BMC) address scheme on the target spoke cluster and provides a matching URL for the installation media. These updates offer the ability to provision single-stack, IPv6 spoke clusters from a dual-stack hub cluster.
 
 [id="ocp-4-14-nw-shiftstack-dual-stack"]
@@ -1323,6 +1348,7 @@ With this release, you can set the control plane hardware speed to one of `"Stan
 
 [id="ocp-4-14-ztp-siteconfig-deprecation"]
 ==== Deprecation of fields in SiteConfig
+
 With this update, the `apiVIP` and `ingressVIP` fields in the `SiteConfig` custom resource definition (CRD) are deprecated in favor of the plural forms, `apiVIPs` and `ingressVIPs`.
 
 [id="ocp-4-14-hcp"]
@@ -1330,18 +1356,22 @@ With this update, the `apiVIP` and `ingressVIP` fields in the `SiteConfig` custo
 
 [id="ocp-4-14-hcp-ga-bm-virt"]
 ==== Hosted control planes is Generally Available on bare metal and {VirtProductName}
+
 Hosted control planes for {product-title} is now Generally Available on the bare-metal and {VirtProductName} platforms. Hosted control planes on AWS remains a Technology Preview feature.
 
 [id="ocp-4-14-hcp-arm"]
 ==== Creating ARM NodePool objects on AWS hosted clusters (Technology Preview)
+
 In this release, you can schedule application workloads on 64-bit ARM and AMD64 from the same hosted control plane. For more information, see link:https://access.redhat.com/documentation/en-us/red_hat_advanced_cluster_management_for_kubernetes/2.9/html/clusters/cluster_mce_overview#hosted-cluster-arm-node-pools[Creating ARM NodePool objects on AWS hosted clusters].
 
 [id="ocp-4-14-hcp-ibm-power-z"]
 ==== Hosted control planes on {ibm-z-title} (Technology Preview)
+
 In this release, hosted control planes is available as a Technology Preview feature on {ibm-z-title}. For more information, see link:https://access.redhat.com/documentation/en-us/red_hat_advanced_cluster_management_for_kubernetes/2.9/html/clusters/cluster_mce_overview#configuring-hosting-service-cluster-ibmz[Configuring the hosting cluster on 64-bit x84 bare metal for IBM Z compute nodes (Technology Preview)].
 
 [id="ocp-4-14-hcp-ibm-power"]
 ==== Hosted control planes on {ibm-power-title} (Technology Preview)
+
 In this release, hosted control planes is available as a Technology Preview feature on {ibm-power-title}. For more information, see link:https://access.redhat.com/documentation/en-us/red_hat_advanced_cluster_management_for_kubernetes/2.9/html/clusters/cluster_mce_overview#config-hosted-service-ibmpower[Configuring the hosting cluster on a 64-bit x86 OpenShift Container Platform cluster to create hosted control planes for IBM Power compute nodes (Technology Preview)].
 
 [id="ocp-4-14-insights-operator"]
@@ -1349,6 +1379,7 @@ In this release, hosted control planes is available as a Technology Preview feat
 
 [id="ocp-4-14-insights-operator-on-demand-data-gathering"]
 ==== On demand data gathering (Technology Preview)
+
 In {product-title} {product-version}, Insights Operator can now run gather operations on demand. For more information about running gather operations on demand, see xref:../support/remote_health_monitoring/using-insights-operator.adoc#running-insights-operator-gather_using-insights-operator[Running an Insights Operator gather operation].
 
 [id="ocp-4-14-insights-operator-individual-pods"]
