--- a/virt/release_notes/virt-4-17-release-notes.adoc
+++ b/virt/release_notes/virt-4-17-release-notes.adoc
@@ -142,6 +142,9 @@ Some features in this release are currently in Technology Preview. These experim
 
 link:https://access.redhat.com/support/offerings/techpreview[Technology Preview Features Support Scope]
 
+//CNV-40183 Release note: Tech preview for storage class migration
+* You can now migrate storage classes for running and stopped VMs.
+
 //CNV-15028: Nested virt in virt hosts. This feature will remain in tech preview indefinitely.
 * You can now enable link:https://access.redhat.com/solutions/6692341[nested virtualization on {VirtProductName} hosts].
 
