OSDOCS-11688: adds drop-in config MicroShift

--- a/microshift_configuring/microshift-using-config-yaml.adoc
+++ b/microshift_configuring/microshift-using-config-yaml.adoc
@@ -18,6 +18,8 @@ include::modules/microshift-config-yaml-custom.adoc[leveloffset=+1]
 
 include::modules/microshift-config-parameters-table.adoc[leveloffset=+2]
 
+include::modules/microshift-config-snippets.adoc[leveloffset=+2]
+
 include::modules/microshift-nw-advertise-address.adoc[leveloffset=+2]
 
 include::modules/microshift-config-nodeport-limits.adoc[leveloffset=+2]
