OLS-1145: Document attaching a YAML file from the Networking page

--- a/modules/ols-attaching-a-resource-object-to-your-query.adoc
+++ b/modules/ols-attaching-a-resource-object-to-your-query.adoc
@@ -24,6 +24,8 @@ You can attach the following resources:
 * `CronJob`, `DaemonSet`, `Deployment`, `Job`, `Pod`, `ReplicaSet` and `StatefulSet` from *Workloads* in the {ocp-product-title} web console.
 
 * `Alert` from *Observe* in the {ocp-product-title} web console.
+
+* `Services`, `Routes`, `Ingresses`, and `NetworkPolicies` from *Networking* in the {ocp-product-title} web console.
 ====
 
 . Enter a question.
