[enterprise-4.16]OSDOCS-11274:changing uppercase to lowercase for Greenboot

--- a/microshift_configuring/microshift-using-config-tools.adoc
+++ b/microshift_configuring/microshift-using-config-tools.adoc
@@ -22,4 +22,4 @@ include::modules/microshift-config-nodeport-limits.adoc[leveloffset=+2]
 [role="_additional-resources"]
 == Additional resources
 
-* xref:../../microshift-greenboot-checking-status.adoc#microshift-greenboot-checking-status[Checking Greenboot status]
+* xref:../../microshift-greenboot-checking-status.adoc#microshift-greenboot-checking-status[Checking greenboot status]
