--- a/microshift_install/microshift-greenboot.adoc
+++ b/microshift_install/microshift-greenboot.adoc
@@ -1,6 +1,6 @@
 :_mod-docs-content-type: ASSEMBLY
 [id="microshift-greenboot"]
-= The Greenboot health check framework
+= The greenboot health check framework
 include::_attributes/attributes-microshift.adoc[]
 :context: microshift-greenboot
 
