--- a/modules/microshift-check-journal-logs-updates.adoc
+++ b/modules/microshift-check-journal-logs-updates.adoc
@@ -22,7 +22,7 @@ The default configuration of the `systemd` journal service stores data in a vola
 $ sudo journalctl -u microshift
 ----
 
-* Check the Greenboot journal logs by running the following command:
+* Check the greenboot journal logs by running the following command:
 +
 [source,terminal]
 ----
