--- a/modules/microshift-greenboot-microshift-health-script.adoc
+++ b/modules/microshift-greenboot-microshift-health-script.adoc
@@ -6,7 +6,7 @@
 [id="microshift-health-script_{context}"]
 = The {microshift-short} health check script
 
-The `40_microshift_running_check.sh` health check script only performs validation of core {microshift-short} services. Install your customized workload health check scripts in the Greenboot directories to ensure successful application operations after system updates. Scripts run in alphabetical order.
+The `40_microshift_running_check.sh` health check script only performs validation of core {microshift-short} services. Install your customized workload health check scripts in the greenboot directories to ensure successful application operations after system updates. Scripts run in alphabetical order.
 
 {microshift-short} health checks are listed in the following table:
 
