bugfix: chapter title consistency

--- a/installing/installing_bare_metal_ipi/ipi-install-installing-a-cluster.adoc
+++ b/installing/installing_bare_metal_ipi/ipi-install-installing-a-cluster.adoc
@@ -1,6 +1,6 @@
 :_mod-docs-content-type: ASSEMBLY
 [id="ipi-install-installing-a-cluster"]
-= Installing a cluster
+= Installing a installer-provisioned cluster on bare metal
 include::_attributes/common-attributes.adoc[]
 :context: ipi-install-installing-a-cluster
 
