bugfix: standardise and dedupe chapter titles

--- a/installing/installing_aws/ipi/ipi-aws-preparing-to-install.adoc
+++ b/installing/installing_aws/ipi/ipi-aws-preparing-to-install.adoc
@@ -1,6 +1,6 @@
 :_mod-docs-content-type: ASSEMBLY
 [id="ipi-aws-preparing-to-install"]
-= Preparing to install a cluster on AWS
+= Preparing to install a cluster on AWS with IPI
 include::_attributes/common-attributes.adoc[]
 :context: ipi-aws-preparing-to-install
 
