--- a/installing/installing_aws/upi/upi-aws-preparing-to-install.adoc
+++ b/installing/installing_aws/upi/upi-aws-preparing-to-install.adoc
@@ -1,6 +1,6 @@
 :_mod-docs-content-type: ASSEMBLY
 [id="upi-aws-preparing-to-install"]
-= Preparing to install a cluster on AWS
+= Preparing to install a cluster on AWS with UPI
 include::_attributes/common-attributes.adoc[]
 :context: upi-aws-preparing-to-install
 
