--- a/installing/installing_azure/ipi/installing-azure-preparing-ipi.adoc
+++ b/installing/installing_azure/ipi/installing-azure-preparing-ipi.adoc
@@ -1,6 +1,6 @@
 :_mod-docs-content-type: ASSEMBLY
 [id="installing-azure-preparing-ipi"]
-= Preparing to install a cluster on Azure
+= Preparing to install a cluster on Azure with IPI
 include::_attributes/common-attributes.adoc[]
 :context: installing-azure-preparing-ipi
 
