--- a/installing/installing_azure/upi/installing-azure-preparing-upi.adoc
+++ b/installing/installing_azure/upi/installing-azure-preparing-upi.adoc
@@ -1,6 +1,6 @@
 :_mod-docs-content-type: ASSEMBLY
 [id="installing-azure-preparing-upi"]
-= Preparing to install a cluster on Azure
+= Preparing to install a cluster on Azure with UPI
 include::_attributes/common-attributes.adoc[]
 :context: installing-azure-preparing-upi
 
