--- a/installing/installing_azure_stack_hub/upi/upi-ash-preparing-to-install.adoc
+++ b/installing/installing_azure_stack_hub/upi/upi-ash-preparing-to-install.adoc
@@ -1,6 +1,6 @@
 :_mod-docs-content-type: ASSEMBLY
 [id="upi-ash-preparing-to-install"]
-= Preparing to install a cluster on Azure Stack Hub
+= Preparing to install a cluster on Azure Stack Hub with UPI
 include::_attributes/common-attributes.adoc[]
 :context: upi-ash-preparing-to-install
 
