--- a/installing/installing_vsphere/ipi/installing-restricted-networks-installer-provisioned-vsphere.adoc
+++ b/installing/installing_vsphere/ipi/installing-restricted-networks-installer-provisioned-vsphere.adoc
@@ -1,6 +1,6 @@
 :_mod-docs-content-type: ASSEMBLY
 [id="installing-restricted-networks-installer-provisioned-vsphere"]
-= Installing a cluster on vSphere in a restricted network
+= Installing a cluster on vSphere in a restricted network with IPI
 include::_attributes/common-attributes.adoc[]
 :context: installing-restricted-networks-installer-provisioned-vsphere
 
