--- a/installing/installing_vsphere/ipi/installing-vsphere-installer-provisioned-customizations.adoc
+++ b/installing/installing_vsphere/ipi/installing-vsphere-installer-provisioned-customizations.adoc
@@ -1,6 +1,6 @@
 :_mod-docs-content-type: ASSEMBLY
 [id="installing-vsphere-installer-provisioned-customizations"]
-= Installing a cluster on vSphere with customizations
+= Installing a cluster on vSphere with IPI and customizations
 include::_attributes/common-attributes.adoc[]
 :context: installing-vsphere-installer-provisioned-customizations
 :platform: vSphere
