--- a/installing/installing_vsphere/ipi/installing-vsphere-installer-provisioned-network-customizations.adoc
+++ b/installing/installing_vsphere/ipi/installing-vsphere-installer-provisioned-network-customizations.adoc
@@ -1,6 +1,6 @@
 :_mod-docs-content-type: ASSEMBLY
 [id="installing-vsphere-installer-provisioned-network-customizations"]
-= Installing a cluster on vSphere with network customizations
+= Installing a cluster on vSphere with IPI and network customizations
 include::_attributes/common-attributes.adoc[]
 :context: installing-vsphere-installer-provisioned-network-customizations
 
