--- a/installing/installing_vsphere/ipi/installing-vsphere-installer-provisioned.adoc
+++ b/installing/installing_vsphere/ipi/installing-vsphere-installer-provisioned.adoc
@@ -1,6 +1,6 @@
 :_mod-docs-content-type: ASSEMBLY
 [id="installing-vsphere-installer-provisioned"]
-= Installing a cluster on vSphere
+= Installing a cluster on vSphere with IPI
 include::_attributes/common-attributes.adoc[]
 :context: installing-vsphere-installer-provisioned
 
