--- a/installing/installing_azure_stack_hub/ipi/ipi-ash-preparing-to-install.adoc
+++ b/installing/installing_azure_stack_hub/ipi/ipi-ash-preparing-to-install.adoc
@@ -1,6 +1,6 @@
 :_mod-docs-content-type: ASSEMBLY
 [id="ash-preparing-to-install-ipi"]
-= Preparing to install a cluster on Azure Stack Hub
+= Preparing to install a cluster on Azure Stack Hub with IPI
 include::_attributes/common-attributes.adoc[]
 :context: ash-preparing-to-install-ipi
 
