--- a/installing/installing_vsphere/ipi/ipi-vsphere-installation-reqs.adoc
+++ b/installing/installing_vsphere/ipi/ipi-vsphere-installation-reqs.adoc
@@ -1,6 +1,6 @@
 :_mod-docs-content-type: ASSEMBLY
 [id="ipi-vsphere-installation-reqs"]
-= vSphere installation requirements
+= vSphere installation requirements with IPI
 include::_attributes/common-attributes.adoc[]
 :context: ipi-vsphere-installation-reqs
 
