--- a/installing/installing_vsphere/upi/installing-vsphere.adoc
+++ b/installing/installing_vsphere/upi/installing-vsphere.adoc
@@ -1,6 +1,6 @@
 :_mod-docs-content-type: ASSEMBLY
 [id="installing-vsphere"]
-= Installing a cluster on vSphere with user-provisioned infrastructure
+= Installing a cluster on vSphere with UPI
 include::_attributes/common-attributes.adoc[]
 :context: installing-vsphere
 :platform: vSphere
