Fix CRD example YAML

--- a/modules/crd-creating-crds.adoc
+++ b/modules/crd-creating-crds.adoc
@@ -21,14 +21,14 @@ To create a CRD:
 .Example YAML file for a CRD
 [source,yaml]
 ----
-apiVersion: apiextensions.k8s.io/v1 <1>
+apiVersion: apiextensions.k8s.io/v1 # <1>
 kind: CustomResourceDefinition
 metadata:
-  name: crontabs.stable.example.com <2>
+  name: crontabs.stable.example.com # <2>
 spec:
-  group: stable.example.com <3>
+  group: stable.example.com # <3>
   versions:
-    - name: v1 <4>
+    - name: v1 # <4>
       served: true
       storage: true
       schema:
@@ -44,16 +44,17 @@ spec:
                   type: string
                 replicas:
                   type: integer
-  scope: Namespaced <5>
+  scope: Namespaced # <5>
   names:
-    plural: crontabs <6>
-    singular: crontab <7>
-    kind: CronTab <8>
+    plural: crontabs # <6>
+    singular: crontab # <7>
+    kind: CronTab # <8>
     shortNames:
-    - ct <9>
+    - ct # <9>
+
 ----
 <1> Use the `apiextensions.k8s.io/v1` API.
-<2> Specify a name for the definition. This must be in the `<plural-name>.<group>` format using the values from the `group` and `plural` fields.
+<2> Specify a name for the definition. This must be in the `<plural_name>.<group>` format using the values from the `group` and `plural` fields.
 <3> Specify a group name for the API. An API group is a collection of objects that are logically related. For example, all batch objects like `Job` or `ScheduledJob` could be in the batch API group (such as `batch.api.example.com`). A good practice is to use a fully-qualified-domain name (FQDN) of your organization.
 <4> Specify a version name to be used in the URL. Each API group can exist in multiple versions, for example `v1alpha`, `v1beta`, `v1`.
 <5> Specify whether the custom objects are available to a project (`Namespaced`) or all projects in the cluster (`Cluster`).
