--- a/release_notes/ocp-4-17-release-notes.adoc
+++ b/release_notes/ocp-4-17-release-notes.adoc
@@ -2270,9 +2270,9 @@ In the following tables, features are marked with the following statuses:
 |Feature |4.15 |4.16 |4.17
 
 |Installing {product-title} on {oci-first} with VMs
-|Technology Preview
-|Technology Preview
-|Technology Preview
+|General Availability
+|General Availability
+|General Availability
 
 |Installing {product-title} on {oci-first} on bare metal
 |Developer Preview
@@ -2305,11 +2305,6 @@ In the following tables, features are marked with the following statuses:
 |Technology Preview
 
 |Mount shared entitlements in BuildConfigs in RHEL
-|Technology Preview
-|Technology Preview
-|Technology Preview
-
-|{product-title} on {oci-first}
 |Technology Preview
 |Technology Preview
 |Technology Preview
