--- a/virt/virtual_machines/virt-managing-vms-openshift-pipelines.adoc
+++ b/virt/virtual_machines/virt-managing-vms-openshift-pipelines.adoc
@@ -8,11 +8,15 @@ toc::[]
 
 link:https://docs.openshift.com/pipelines/latest/about/understanding-openshift-pipelines.html[{pipelines-title}] is a Kubernetes-native CI/CD framework that allows developers to design and run each step of the CI/CD pipeline in its own container.
 
-The Scheduling, Scale, and Performance (SSP) Operator integrates {VirtProductName} with {pipelines-shortname}. The SSP Operator includes tasks and example pipelines that allow you to:
+The {pipelines-shortname} tasks and example pipeline allow you to:
 
-* Create and manage virtual machines (VMs), persistent volume claims (PVCs), and data volumes
+* Create and manage virtual machines (VMs), persistent volume claims (PVCs), data volumes and data sources
 * Run commands in VMs
 * Manipulate disk images with `libguestfs` tools
+
+The tasks are located in https://artifacthub.io/packages/search?repo=redhat-tekton-tasks&sort=relevance&page=1[tasks catalog].
+
+Example Windows pipeline is located in https://artifacthub.io/packages/tekton-pipeline/redhat-pipelines/windows-efi-installer[pipelines catalog].
 
 [id="prerequisites_virt-managing-vms-openshift-pipelines"]
 == Prerequisites
