--- a/modules/virt-supported-ssp-tasks.adoc
+++ b/modules/virt-supported-ssp-tasks.adoc
@@ -4,11 +4,11 @@
 
 :_mod-docs-content-type: REFERENCE
 [id="virt-supported-ssp-tasks_{context}"]
-= Virtual machine tasks supported by the SSP Operator
+= Supported Virtual machine tasks
 
-The following table shows the tasks that are included as part of the SSP Operator.
+The following table shows the tasks that are supported.
 
-.Virtual machine tasks supported by the SSP Operator
+.Supported Virtual machine tasks
 [cols="1,1",options="header"]
 |===
 | Task | Description
