[enterprise-4.17] CNV#40188: RN 4.17 Final

--- a/virt/release_notes/virt-4-17-release-notes.adoc
+++ b/virt/release_notes/virt-4-17-release-notes.adoc
@@ -57,8 +57,8 @@ Quick start tours are available for several {VirtProductName} features. To view 
 
 This release adds new features and enhancements related to the following components and concepts:
 
-[id="virt-4-17-installation-update"]
-=== Installation and update
+//[id="virt-4-17-installation-update"]
+//=== Installation and update
 
 [id="virt-4-17-infrastructure"]
 === Infrastructure
@@ -89,8 +89,8 @@ Overcommitting memory on a highly utilized system can decrease workload performa
 * You can now use the Application-Aware Quota (AAQ) Operator to customize and manage resource quotas for individual components in an {product-title} cluster. The AAQ Operator provides the `ApplicationAwareResourceQuota` and `ApplicationAwareClusterResourceQuota` custom resource definitions (CRDs) that can be used to allocate resources without interfering with cluster-level activities such as upgrades and node maintenance.
 
 
-[id="virt-4-17-networking"]
-=== Networking
+//[id="virt-4-17-networking"]
+//=== Networking
 
 [id="virt-4-17-storage"]
 === Storage
@@ -112,11 +112,11 @@ To access the new view, navigate to *Administrator* -> *Virtualization* in the w
 
 * xref:../../virt/virtual_machines/virt-edit-vms.adoc#virt-hot-plugging-memory_virt-edit-vms[Hot plugging memory] for VMs from the web console is now generally available.
 
-[id="virt-4-17-monitoring"]
-=== Monitoring
+//[id="virt-4-17-monitoring"]
+//=== Monitoring
 
-[id="virt-4-17-notable-technical-changes"]
-=== Notable technical changes
+//[id="virt-4-17-notable-technical-changes"]
+//=== Notable technical changes
 
 [id="virt-4-17-deprecated-removed"]
 == Deprecated and removed features
@@ -143,7 +143,9 @@ Deprecated features are included in the current release and supported. However, 
 [id="virt-4-17-removed"]
 === Removed features
 
-Removed features are not supported in the current release.
+Removed features are those that were deprecated in earlier releases. They are now removed from {VirtProductName} and are no longer supported.
+
+No features were removed in this release.
 
 [id="virt-4-16-technology-preview_{context}"]
 == Technology Preview features
@@ -158,19 +160,19 @@ link:https://access.redhat.com/support/offerings/techpreview[Technology Preview 
 //CNV-15028: Nested virt in virt hosts. This feature will remain in tech preview indefinitely.
 * You can now enable link:https://access.redhat.com/solutions/6692341[nested virtualization on {VirtProductName} hosts].
 
-[id="virt-4-17-bug-fixes"]
-== Bug fixes
+//[id="virt-4-17-bug-fixes"]
+//== Bug fixes
 
 [id="virt-4-17-known-issues"]
 == Known issues
 
-[discrete]
-[id="virt-4-17-ki-monitoring"]
-==== Monitoring
+//[discrete]
+//[id="virt-4-17-ki-monitoring"]
+//==== Monitoring
 
-[discrete]
-[id="virt-4-17-ki-networking"]
-==== Networking
+//[discrete]
+//[id="virt-4-17-ki-networking"]
+//==== Networking
 
 
 [discrete]
@@ -188,7 +190,6 @@ link:https://access.redhat.com/support/offerings/techpreview[Technology Preview 
 //CNV-23501: 4.16 - Keep per Dominik Holler
 * If you clone more than 100 VMs using the `csi-clone` cloning strategy, then the Ceph CSI might not purge the clones. Manually deleting the clones might also fail. (link:https://issues.redhat.com/browse/CNV-23501[*CNV-23501*])
 ** As a workaround, you can restart the `ceph-mgr` to purge the VM clones.
-
 
 
 [discrete]
