--- a/modules/oadp-s3-compatible-backup-storage-providers.adoc
+++ b/modules/oadp-s3-compatible-backup-storage-providers.adoc
@@ -21,13 +21,12 @@ The following AWS S3 compatible object storage providers are fully supported by 
 * Ceph RADOS Gateway (Ceph Object Gateway)
 * Red Hat Container Storage
 * {odf-full}
+* Google Cloud Platform (GCP)
+* Microsoft Azure
 
 [NOTE]
 ====
-The following compatible object storage providers are supported and have their own Velero object store plugins:
-
-* Google Cloud Platform (GCP)
-* Microsoft Azure
+Google Cloud Platform (GCP) and Microsoft Azure have their own Velero object store plugins.
 ====
 
 [id="oadp-s3-compatible-backup-storage-providers-unsupported"]
