--- a/argo_rollouts/using-cluster-scoped-rollouts-instance-to-manage-rollouts-resources.adoc
+++ b/argo_rollouts/using-cluster-scoped-rollouts-instance-to-manage-rollouts-resources.adoc
@@ -1,16 +1,15 @@
 :_mod-docs-content-type: ASSEMBLY
 include::_attributes/common-attributes.adoc[]
-[id="using-a-cluster-scoped-rollouts-instance-to-manage-rollouts-resources"]
+[id="using-cluster-scoped-rollouts-instance-to-manage-rollouts-resources"]
 = Using a cluster-scoped rollouts instance to manage rollouts resources
-:context: using-a-cluster-scoped-rollouts-instance-to-manage-rollouts-resources
+:context: using-cluster-scoped-rollouts-instance-to-manage-rollouts-resources
 
 toc::[]
 
-To manage rollouts resources, after you install the {gitops-titel} Operator on the cluster, you can create and configure a `RolloutManager` custom resource (CR) instance in the namespace of your choice. You can then update the existing `Subscription` object for the {gitops-title} Operator and add user-defined namespaces to the `CLUSTER_SCOPED_ARGO_ROLLOUTS_NAMESPACES` environment variable in the `spec` section of the Argo CD instance.
+To manage rollouts resources, after you install the {gitops-title} Operator on the cluster, you can create and configure a `RolloutManager` custom resource (CR) instance in the namespace of your choice. You can then update the existing `Subscription` object for the {gitops-title} Operator and add user-defined namespaces to the `CLUSTER_SCOPED_ARGO_ROLLOUTS_NAMESPACES` environment variable in the `spec` section of the Argo CD instance.
 
 [id="prerequisites_{context}"]
 == Prerequisites
-
 * You have logged in to the {OCP} cluster as an administrator.
 * You have installed the {gitops-title} Operator on your {OCP} cluster.
 * You have created a `RolloutManager` custom resource.
