--- a/modules/creating-ibm-cos-instance.adoc
+++ b/modules/creating-ibm-cos-instance.adoc
@@ -3,8 +3,8 @@
 // * backup_and_restore/application_backup_and_restore/installing/installing-oadp-ibm-cloud.adoc
 
 :_mod-docs-content-type: PROCEDURE
-[id="configuring-ibm-cos_{context}"]
-= Configuring IBM Cloud Object Storage (COS)
+[id="creating-ibm-cos-instance_{context}"]
+= Creating an IBM Cloud Object Storage (COS) instance
 
 .Prerequisites
 
