--- a/modules/otel-config-instrumentation.adoc
+++ b/modules/otel-config-instrumentation.adoc
@@ -101,6 +101,8 @@ spec:
 [id="otel-instrumentation-options_exporter_{context}"]
 == Exporter configuration
 
+The `Instrumentation` custom resource configures OTLP exporter:
+
 .Sample exporter configuration
 [source,yaml]
 ----
@@ -109,9 +111,9 @@ spec:
     tls:
       secretName: serving-certs # <2>
       configMapName: ca-bundle  # <3>
-      ca: service-ca.crt # <4>
-      cert: tls.crt # <5>
-      key: tls.key # <6>
+      ca_file: service-ca.crt # <4>
+      cert_file: tls.crt # <5>
+      key_file: tls.key # <6>
 ----
 <1> OpenTelemetry protocol (OTLP) endpoint. HTTP scheme `https://` enables secure connection and requires `tls` configuration.
 <2> Secret name which contains TLS certificate and key. The CA certificate can be in the secret or in the config map. The secret must exists in the namespace of the pod injecting the auto-instrumentation.
