--- a/modules/otel-config-instrumentation.adoc
+++ b/modules/otel-config-instrumentation.adoc
@@ -101,7 +101,7 @@ spec:
 [id="otel-instrumentation-options_exporter_{context}"]
 == Exporter configuration
 
-The `Instrumentation` custom resource configures OTLP exporter:
+The `Instrumentation` custom resource configures only OTLP exporter:
 
 .Sample exporter configuration
 [source,yaml]
