--- a/rosa_hcp/rosa-hcp-quickstart-guide.adoc
+++ b/rosa_hcp/rosa-hcp-quickstart-guide.adoc
@@ -19,7 +19,7 @@ include::modules/rosa-getting-started-install-configure-cli-tools.adoc[leveloffs
 
 .Next steps
 
-Before you can use the {cluster-manager} {hybrid-console-second} to deploy ROSA clusters, you must associate your AWS account with your Red{nbsp}Hat organization and create the required account-wide STS roles and policies. For information on how your AWS and Red Hat accounts interact, see xref:../cloud_experts_tutorials/cloud-experts-deploying-application/cloud-experts-deploying-application-prerequisites.adoc#rosa-sts-understanding-aws-account-association_cloud-experts-deploying-application-prerequisites[Understanding AWS account association]
+Before you can use the {cluster-manager} {hybrid-console-second} to deploy ROSA clusters, you must associate your AWS account with your Red{nbsp}Hat organization and create the required account-wide STS roles and policies.
 
 include::modules/rosa-sts-creating-account-wide-sts-roles-and-policies.adoc[leveloffset=+1]
 
