[cnv] wasp-agent RN link

--- a/virt/release_notes/virt-4-17-release-notes.adoc
+++ b/virt/release_notes/virt-4-17-release-notes.adoc
@@ -75,7 +75,7 @@ This release adds new features and enhancements related to the following compone
 === Virtualization
 
 //CNV-34780 GA: Safe memory overcommitment using WASP
-* You can now increase VM workload density on nodes by overcommitting memory (RAM) with the `wasp-agent`. The wasp agent assigns swap resources to worker nodes and manages pod evictions when nodes are at risk.
+* You can now xref:../../virt/post_installation_configuration/virt-configuring-higher-vm-workload-density.adoc#virt-configuring-higher-vm-workload-density[increase VM workload density] on nodes by overcommitting memory (RAM) with the `wasp-agent`. The wasp agent assigns swap resources to worker nodes and manages pod evictions when nodes are at risk.
 +
 [NOTE]
 ====
